src/test/ui/feature-gates/feature-gate-cfg-target-has-atomic.stderr
error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:15:7
   |
LL | #[cfg(target_has_atomic = "8")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:15:7
   |
LL | #[cfg(target_has_atomic = "8")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:22:7
   |
LL | #[cfg(target_has_atomic = "8")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:22:7
   |
LL | #[cfg(target_has_atomic = "8")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:28:7
   |
LL | #[cfg(target_has_atomic = "16")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:28:7
   |
LL | #[cfg(target_has_atomic = "16")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:34:7
   |
LL | #[cfg(target_has_atomic = "16")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:34:7
   |
LL | #[cfg(target_has_atomic = "16")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:40:7
   |
LL | #[cfg(target_has_atomic = "32")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:40:7
   |
LL | #[cfg(target_has_atomic = "32")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:46:7
   |
LL | #[cfg(target_has_atomic = "32")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:46:7
   |
LL | #[cfg(target_has_atomic = "32")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:52:7
   |
LL | #[cfg(target_has_atomic = "64")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:52:7
   |
LL | #[cfg(target_has_atomic = "64")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:58:7
   |
LL | #[cfg(target_has_atomic = "64")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:58:7
   |
LL | #[cfg(target_has_atomic = "64")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:64:7
   |
LL | #[cfg(target_has_atomic = "128")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:69:7
   |
LL | #[cfg(target_has_atomic = "128")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:74:7
   |
LL | #[cfg(target_has_atomic = "ptr")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:74:7
   |
LL | #[cfg(target_has_atomic = "ptr")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:80:7
   |
LL | #[cfg(target_has_atomic = "ptr")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:80:7
   |
LL | #[cfg(target_has_atomic = "ptr")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:88:10
   |
LL |     cfg!(target_has_atomic = "8");
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:90:10
   |
LL |     cfg!(target_has_atomic = "16");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:92:10
   |
LL |     cfg!(target_has_atomic = "32");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:94:10
   |
LL |     cfg!(target_has_atomic = "64");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:96:10
   |
LL |     cfg!(target_has_atomic = "128");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:98:10
   |
LL |     cfg!(target_has_atomic = "ptr");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #32976 <https://github.com/rust-lang/rust/issues/32976> for more information
   = help: add `#![feature(cfg_target_has_atomic)]` to the crate attributes to enable

error: aborting due to 28 previous errors

For more information about this error, try `rustc --explain E0658`.
